--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = Jorgvt
 
 ### Optional ###
-# requirements = fastcore pandas
+requirements = re requests beautifulsoup4 pandas
 # dev_requirements = 
 # console_scripts =
