:heavy_less_sign: removed base packages.

--- a/settings.ini
+++ b/settings.ini
@@ -37,6 +37,6 @@ status = 3
 user = Jorgvt
 
 ### Optional ###
-requirements = re requests beautifulsoup4 pandas
+requirements = beautifulsoup4 pandas
 # dev_requirements = 
 # console_scripts =
